@@ -22,6 +22,18 @@ restart.
 Fixed: Subtract SLAB reclaimable memory from the system memory
 usage on Linux.
 
+Fixed: Some systems with upstart (e.g. RHEL/CentOS) had problems
+with restart action which consisted of stop+start sequence - the pidfile
+disappeared after stop+start sequence and Monit though the process
+Monit now waits not just for process exit, but for stop/start program
+finish too.
+
+Fixed: "PID/PPID changed" events were sometimes triggered after restart
+program.
+
+New: Log output from start/stop/restart programs. In the case of success
+the output is logged only in debug mode.
+
 
 Version 5.8.1
 
